# ideogram-deployment

./: .gitignore  CITATION.cff  Cargo.toml  NOTICE  README.md  int8_mps.py  main.py  pyproject.toml  run_int8.py
configs/env/: linux-cuda-24gb-nf4.env.example  linux-cuda-4070-fp8.env.example  mac-mps-int8.env.example  runai-h200-fp8.env.example
configs/prompts/: smoke_caption.json
configs/prompts/vi/: README.md  bien-hieu-pho-dem-ha-noi.json  ca-phe-misa-product-ad.json  poster-tet-an-lanh.json
crates/ideogram4-cli/: Cargo.toml
crates/ideogram4-cli/src/: main.rs
deploy/runai/: ideogram4-h200-fp8-smoke.template.yaml
docker/: Dockerfile.cuda
experiments/mac-mps-int8/: success-note.md
scripts/: _common.sh  check_env.py  check_env.sh  read_prompt.py  run_mac_int8_batch.py  run_vi_prompts_mac.sh  smoke_cuda_fp8.sh  smoke_cuda_nf4.sh  smoke_mac_mps_int8.sh  smoke_runai_h200_fp8.sh
