[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "misa-ideogram4-test"
version = "0.1.0"
description = "MISA Ideogram 4 runtime and smoke-test harness for MPS, CUDA, and Run:ai."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "diffusers",
    "einops>=0.7.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.17.0",
    "pillow",
    "requests>=2.28",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.1",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/ideogram4"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ideogram4",
    "src/ideogram4/magic_prompt_system_prompts/*.txt",
    "run_inference.py",
    "configs",
    "scripts",
    "README.md",
    "LICENSE.md",
    "model_licenses",
    "pyproject.toml",
]
